fix: spacing on mobile

--- a/main.css
+++ b/main.css
@@ -236,6 +236,10 @@ body {
         margin-top:15vh;
         text-align: center;
     }
+
+    .sectionContainer {
+        margin-bottom: 15vh;
+    }
 }
 
 /* Large Phone design and portrait tablet */
